ajuste de posicion en  cajas de texto en el contrato

--- a/Avance/public/src/pages/Alma.css
+++ b/Avance/public/src/pages/Alma.css
@@ -42,8 +42,8 @@
   }
   
   .signature-field {
-    top: 82%; /* Adjust position as needed */
-    left: 30%; /* Adjust position as needed */
+    top: 85%; /* Adjust position as needed */
+    left: 43%; /* Adjust position as needed */
   }
   .name-field label,
   .signature-field label{
@@ -57,7 +57,7 @@
     width: 100%;
     padding: 8px;
     border: none;
-    background-color: transparent; /* Remove background */
+    background-color: white; /* Remove background */
     border-bottom: 1px solid black; /* Add a bottom border for a line */
     box-sizing: border-box;
   }
@@ -77,7 +77,6 @@
   }
   
   .input-fields input[type="text"],
-  .input-fields input[type="email"],
   .input-fields textarea,
   .signature-area input[type="text"] {
     width: 100%;
